[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
criterion = "0.5.1"

[[bench]]
name = "micro_small_alloc_bench"
harness = false
path = "benches/micro_small_alloc_bench.rs"

[[bench]]
name = "micro_large_alloc_bench"
harness = false
path = "benches/micro_large_alloc_bench.rs"

[[bench]]
name = "micro_buffer_reuse_bench"
harness = false
path = "benches/micro_buffer_reuse_bench.rs"
