[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
criterion = "0.5.1"

[[bench]]
name = "dynamic_array_bench"
harness = false
path = "benches/dynamic_array_bench.rs"

[[bench]]
name = "large_alloc_bench"
harness = false
path = "benches/large_alloc_bench.rs"

[[bench]]
name = "large_buffer_reuse_bench"
harness = false
path = "benches/large_buffer_reuse_bench.rs"

[[bench]]
name = "linked_list_bench"
harness = false
path = "benches/linked_list_bench.rs"

[[bench]]
name = "parallel_alloc_bench"
harness = false
path = "benches/parallel_alloc_bench.rs"

[[bench]]
name = "shared_queue_bench"
harness = false
path = "benches/shared_queue_bench.rs"

[[bench]]
name = "short_lived_tasks_bench"
harness = false
path = "benches/short_lived_tasks_bench.rs"

[[bench]]
name = "small_alloc_bench"
harness = false
path = "benches/small_alloc_bench.rs"

[[bench]]
name = "small_buffer_reuse_bench"
harness = false
path = "benches/small_buffer_reuse_bench.rs"
